# pyspark-pedidos

./: MANIFEST.in  README.md  exploracao_pagamentos.py  exploracao_pedidos.py  main.py  pyproject.toml  requirements.txt  resultado.py
output/relatorio_pedidos/: .part-00000-0c9b1f40-fdff-45fb-b2ec-c75eba39eb01-c000.snappy.parquet.crc  .part-00000-1b2db349-731e-4e49-a36b-f3e0b505c3a9-c000.snappy.parquet.crc  .part-00000-ddb5ea43-536e-4710-8b1a-eb9f02429798-c000.snappy.parquet.crc  part-00000-0c9b1f40-fdff-45fb-b2ec-c75eba39eb01-c000.snappy.parquet  part-00000-1b2db349-731e-4e49-a36b-f3e0b505c3a9-c000.snappy.parquet  part-00000-ddb5ea43-536e-4710-8b1a-eb9f02429798-c000.snappy.parquet
src/business/: pedidos_logic.py
src/config/: app_config.py
src/io/: data_reader.py  data_writer.py
src/pipeline/: pipeline_orchestrator.py
src/session/: spark_session_manager.py
tests/: test_pedidos_logic.py
